# Chinese_git

./: .gitignore  ABOUT_TRANSLATION.md  CONTRIBUTING.md  LICENSE  README.md  README_DEV.md  USER_HANDBOOK.md  change.txt  config.json  pack.iss  requirements.txt  中文git-pack.py  中文git-pypi.py  中文git.py  中文git更新程序.py
.auto_script/: del_old_files.js  del_old_files.py
.auto_script/弃用的工作流/: verify-pypi-macos.yml  verify-pypi-ubuntu.yml  verify-pypi-windows.yml
.github/: CODEOWNERS  CODEOWNERS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG反馈.yml  config.yml  feature_request.yml  new_command_request.yml
.github/workflows/: automatic-verification-linux.yml  automatic-verification-macos.yml  automatic-verification-windows.yml  build-linux.yml  build-macos.yml  build-windows.yml  verify-pypi-macos.yml  verify-pypi-ubuntu.yml  verify-pypi-windows.yml
AutoPack/: AutoPack.py  AutoPack_CN.py  packinit.iss  requirements.txt
C#/中文git/: Program.cs  中文git.sln
C#/中文git更新程序/: Program.cs  中文git更新程序.csproj  中文git更新程序.sln
ChineseGit/: pyproject.toml
ChineseGit/中文git/: 中文git_pypi.py
java/: ChineseGit.java  ChineseGitUpdater.java
java/back/: 中文git-pack.py
other_language/zh-tw/: 中文git-pack.py  中文git.py
packaging_tutorial/: pyproject.toml
packaging_tutorial/中文git/: __main__.py
